[gd_scene load_steps=3 format=3 uid="uid://tqf6sa4r4bii"]

[ext_resource type="Script" path="res://scripts/multiplayer.gd" id="1_s6cxa"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_uwppj"]

[node name="multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6cxa")

[node name="main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uwppj")

[node name="background" type="ColorRect" parent="main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0, 0.0431373, 1)

[node name="cells" type="GridContainer" parent="main"]
layout_mode = 0
offset_left = 340.0
offset_top = 50.0
offset_right = 380.0
offset_bottom = 90.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="restart_button" type="Button" parent="main"]
layout_mode = 0
offset_left = 522.0
offset_top = 595.0
offset_right = 667.0
offset_bottom = 645.0
text = "Restart"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="main"]
spawn_path = NodePath("../..")

[node name="host" type="Button" parent="main"]
layout_mode = 0
offset_left = 361.0
offset_top = 280.0
offset_right = 488.0
offset_bottom = 339.0
text = "Host"

[node name="join" type="Button" parent="main"]
layout_mode = 0
offset_left = 662.0
offset_top = 288.0
offset_right = 817.0
offset_bottom = 347.0
text = "Join"

[connection signal="pressed" from="main/restart_button" to="main" method="_on_restart_button_pressed"]
[connection signal="pressed" from="main/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="main/join" to="." method="_on_join_pressed"]
